Instant Address Standard/main/default/objects/Service_Flags__c/Service_Flags__c.object-meta.xml
<CustomObject>
    <label>Service Flag</label>
    <nameField>
        <label>Service Flag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>