Instant Address Standard/main/default/objects/Service_Flags__c/fields/Abbrev__c.field-meta.xml
<CustomField>
    <fullName>Abbrev__c</fullName>
    <label>Abbreviation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>