Instant Address Standard/main/default/objects/Service_Flags__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <label>Created</label>
    <type>Date</type>
</CustomField>