Instant Address Standard/main/default/objects/Service_Flags__c/fields/FlagPartition__c.field-meta.xml
<CustomField>
    <fullName>FlagPartition__c</fullName>
    <label>Partition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>